fix overflow and game over screen

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
     width: 80px;
     height: 50px;
     position: absolute;
-    bottom: 0;
+    bottom: 10%;
     left: 50%;
     transform: translate(-50%);
     background-color: blue;
@@ -27,4 +27,11 @@
     position: absolute;
     background-color: yellowgreen;
     border-radius: 100%;
+}
+
+.game-over {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
